# c.speed-tools

./: .env.example  .gitignore  README.md  pyproject.toml
src/cspeed_tools/: bot.py  checks.py  config.py  constants.py  context.py  errors.py  logging_setup.py  main.py
src/cspeed_tools/cogs/: analytics_cog.py  announcements_cog.py  antiabuse_cog.py  automod_cog.py  backup_cog.py  cases_cog.py  channels_cog.py  core_cog.py  dev_cog.py  economy_cog.py  fun_cog.py  games_cog.py  giveaways_cog.py  images_cog.py  integrations_cog.py  levels_cog.py  logs_cog.py  members_cog.py  misc_cog.py  moderation_cog.py  music_cog.py  owner_cog.py  polls_cog.py  profiles_cog.py  reminders_cog.py  roles_cog.py  server_cog.py  staff_cog.py  starboard_cog.py  tags_cog.py  tickets_cog.py  utility_cog.py  verification_cog.py  voice_cog.py  welcome_cog.py
src/cspeed_tools/db/: engine.py  migrations.py  models.py  schema.sql
src/cspeed_tools/manifest/: commands_manifest.yaml
src/cspeed_tools/scripts/: seed_db.py  sync_commands.py
src/cspeed_tools/services/: analytics_service.py  antiabuse_service.py  economy_service.py  giveaways_service.py  global_actions_service.py  guild_config_service.py  integrations_service.py  level_service.py  logging_service.py  moderation_service.py  polls_service.py  reminders_service.py  tags_service.py  ticket_service.py
src/cspeed_tools/ui/: confirm.py
tests/: test_command_tree_matches_manifest.py  test_global_actions.py  test_levels.py  test_manifest_count.py  test_no_stub_markers.py  test_permissions.py  test_ticket_state_machine.py
(+10 files in other folders)
